--- a/MineStar-Currency/src/main/resources/plugin.yml
+++ b/MineStar-Currency/src/main/resources/plugin.yml
@@ -5,3 +5,10 @@ api-version: 1.18
 authors: [ MineStar ]
 commands:
   currency:
+permissions:
+  kr.kro.minestar.currency.default:
+    description:
+  kr.kro.minestar.currency.test:
+    description:
+  kr.kro.minestar.currency.admin:
+    description:
