--- a/MineStar-Currency/src/main/resources/plugin.yml
+++ b/MineStar-Currency/src/main/resources/plugin.yml
@@ -5,6 +5,7 @@ api-version: 1.18
 authors: [ MineStar ]
 commands:
   currency:
+    aliases: [ curr ]
 permissions:
   kr.kro.minestar.currency.default:
     description:
